# msml

./: Pipfile  requirements.txt  setup.cfg
msml/: __init__.py  elements.py  format.py  parse.py  paths.py
msml/assets/: template.html
msml/grammar/: __init__.py  patterns.py
msml/misc/: patterns.py  replacements.py
src/msml/: __init__.py  __meta__.py
stylesheets/: default.css
templates/: default.html  template.html
