[metadata]
name = msml-citharus
version = attr: src.__version__
author = citharus
description = Maarten's Simple Mock-up Language
url = https://github.com/citharus/msml
project_urls =
    Bug Tracker = https://github.com/citharus/msml/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
packages = msml:
python_requires = >=3.9

[options.packages.msml]
where = src