[metadata]
name = msml
description = A mock-up language for school stuff
author = citharus
license = MIT
license_file = LICENSE
version = attr: msml.__version__
url = https://github.com/citharus/msml
project_urls =
    Bug Tracker = https://github.com/citharus/msml/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
packages = msml
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.packages.find]
where = src